i2b-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: i2b-service
spec:
  selector:
    app: i2b-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
